src/test/deca/context/invalid/assign-int-string.deca
// Description:
//    Assign un string a un int
//
// Resultats:
//    Erreur contextuelle
//    Ligne 13 : Une assignation entre un int et un string n'est pas valide (règle 3.32)
//
// Historique:
//    cree le 06/01/2023

{
    int i;
    i = "Error Incoming";
}